fix sup sub vertical-align

--- a/src/reset.css
+++ b/src/reset.css
@@ -11,7 +11,9 @@ body {
 }
 
 sup, sub {
-  vertical-align: inherit;
+  vertical-align: baseline; /* HACK fallback */
+  vertical-align: initial;  /* HACK fallback */
+  vertical-align: unset;
 }
 body,
 h1, h2, h3, h4, h5, h6,
